# ROBOT

./: .gitignore  README.md  Slide 2.docx  THUẬT_TOÁN_NÉ_VẬT_CẢN_CHI_TIẾT.md  TONG_QUAN_QUY_TRINH_HE_THONG.md  config.py  detector.py  docker-compose.yml  extract_cells.py  extract_notebook.py  extract_notebook_cells.py  extract_output.py  main.py  presentation.md  project_flowcharts.html  read_notebook_temp.py  requirements.txt  robot_diagram_context.md  run_command.py  run_notebook_extract.bat  server.py  servo_controller.py  shared_config.h  temp_extract.py
SIN/: CMakeLists.txt  fix_config.py  sdkconfig.defaults
SIN/main/: CMakeLists.txt  config.h  distance_sensor_driver.h  distance_sensor_hcsr04.c  distance_sensor_vl53l0x.c  main.c  motor.c  motor.h  mqtt_client_app.c  mqtt_client_app.h  sensor.c  sensor.h  servo.c  servo.h
docs/: project_flowcharts.md.resolved  robot_flowchart.drawio  terminal_rules.md
flutter_application/: gen_config.py  pubspec.yaml
flutter_application/test/: widget_test.dart
mosquitto/config/: mosquitto.conf
notebooks/: notebooked4c917f13.ipynb
server/: .dockerignore  1.24.0  Dockerfile  api.py  best_model_yolov8.pt  build_face_embeddings.py  check_onnx_cuda.py  config.py  database.py  debug_import.py  debug_import_v2.py  debug_import_v3.py  detector.py  docker-compose.yml  face_recognition_engine.py  metrics.py  requirements-gpu.txt  requirements.txt  run_server_gpu.bat  server.py  servo_controller.py  telegram_notifier.py  test_detection.py  tracker.py  webcam_face_reid_test.py
station/: CMakeLists.txt  sdkconfig.defaults
(+114 files in other folders)
